--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,11 @@
   <packaging>war</packaging>
   
   <properties>
-		
 		<spring.version>4.3.0.RELEASE</spring.version>
 		<spring.security.version>3.2.3.RELEASE</spring.security.version>
 		<jstl.version>1.2</jstl.version>
-	</properties>
-  	
-  
+  </properties>
+  	 
   <build>
   	<plugins>
   		<plugin>
@@ -20,8 +18,6 @@
   			<artifactId>tomcat7-maven-plugin</artifactId>
   			<version>2.2</version>
   		</plugin>
-  		
-
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
@@ -38,6 +34,7 @@
   		</plugin>
   	</plugins>
   </build>
+  
   <dependencies>
   	<dependency>
   		<groupId>org.springframework</groupId>
@@ -70,5 +67,45 @@
   		<artifactId>jstl</artifactId>
   		<version>1.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>servlet-api</artifactId>
+  		<version>2.5</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>jsp-api</artifactId>
+  		<version>2.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-expression</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context-support</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-webmvc-portlet</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+    <groupId>org.apache.tiles</groupId>
+    <artifactId>tiles-extras</artifactId>
+    <version>3.0.5</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.tiles</groupId>
+    <artifactId>tiles-servlet</artifactId>
+    <version>3.0.5</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.tiles</groupId>
+    <artifactId>tiles-jsp</artifactId>
+    <version>3.0.5</version>
+  </dependency>
   </dependencies>
 </project>
