--- a/pom.xml
+++ b/pom.xml
@@ -68,16 +68,6 @@
   		<version>1.2</version>
   	</dependency>
   	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>servlet-api</artifactId>
-  		<version>2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.servlet</groupId>
-  		<artifactId>jsp-api</artifactId>
-  		<version>2.0</version>
-  	</dependency>
-  	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-expression</artifactId>
   		<version>${spring.version}</version>
@@ -106,6 +96,18 @@
     <groupId>org.apache.tiles</groupId>
     <artifactId>tiles-jsp</artifactId>
     <version>3.0.5</version>
+  </dependency>
+  <dependency>
+  	<groupId>javax.servlet</groupId>
+  	<artifactId>javax.servlet-api</artifactId>
+  	<version>3.1.0</version>
+  	<scope>provided</scope>
+  </dependency>
+  <dependency>
+  	<groupId>javax.servlet.jsp</groupId>
+  	<artifactId>javax.servlet.jsp-api</artifactId>
+  	<version>2.3.1</version>
+  	<scope>provided</scope>
   </dependency>
   </dependencies>
 </project>
