--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,20 @@
   	<version>2.3.1</version>
   	<scope>provided</scope>
   </dependency>
+  <dependency>
+  	<groupId>org.hibernate</groupId>
+  	<artifactId>hibernate-entitymanager</artifactId>
+  	<version>5.1.0.Final</version>
+  </dependency>
+  <dependency>
+  	<groupId>org.springframework.data</groupId>
+  	<artifactId>spring-data-jpa</artifactId>
+  	<version>1.10.2.RELEASE</version>
+  </dependency>
+  <dependency>
+  	<groupId>org.hsqldb</groupId>
+  	<artifactId>hsqldb</artifactId>
+  	<version>2.3.4</version>
+  </dependency>
   </dependencies>
 </project>
